--- a/book11/_config.yml
+++ b/book11/_config.yml
@@ -3,7 +3,7 @@
 
 title: ThenBook11
 author: The Jupyter Book Community & JH
-logo: logo.sketchpad.png
+logo: logo.sketchpad.new.png
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
